--- a/index.html
+++ b/index.html
@@ -435,6 +435,6 @@ LinkedIn
           <p class="linkedin__text"></p>
         </div>
       </div>
-      <script src="./mar.js"></script>
+      <script src="./main.js"></script>
 </body>
 </html>
