--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@ LinkedIn
       </div>
       <div class="menu">
         <nav class="menu__nav">
-          <ul class="r-list menu__list" style="margin-left: 30%;">
+          <ul class="r-list menu__list" style="margin-left: 30%; margin-botton: 5%;">
             <li class="menu__group">
               <a href="#0" class="r-link menu__link">Дёрнем пивка?))</a>
             </li>
